--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.pushtechnology.diffusion</groupId>
             <artifactId>diffusion-client-with-dependencies</artifactId>
-            <version>6.5.3</version>
+            <version>6.6.0-preview.1</version>
             <type>jar</type>
         </dependency>
         <dependency>
